--- a/大模型和分布式/分布式训练.md
+++ b/大模型和分布式/分布式训练.md
@@ -39,3 +39,12 @@ worker：
 载入server分发过来的数据和模型
 
 模型前向计算
+
+### 关注要素
+
+**Checkpoint stalls**：checkpoint的耗费
+
+**Checkpointing frequency**
+
+**Data invariant：**数据一致性
+
