--- a/算法/动态规划.md
+++ b/算法/动态规划.md
@@ -7,3 +7,131 @@
 3. dp数组如何初始化
 4. 确定遍历顺序
 5. 举例推导dp数组
+
+### 0-1背包
+
+![](D:\学习笔记\算法\photos\Dingtalk_20240913201712.jpg)
+
+问背包能背的物品最大价值是多少？
+
+推导路径：
+
+![](D:\学习笔记\分布式\pictures\Snipaste_2024-09-13_20-45-13.png)
+
+```
+dp[i][j]:i表示物品，j表示背包容量，dp[i][j]表示从下标0-i的物品取，背包容量为j时所能装物品的最大价值
+		   					   
+dp[i][j]= max{dp[i-1][j](不选下标为i的物品0)，dp[i-1][j-weight[i]]+value[i]}
+
+dp数组的初始化：
+dp[i][0]=0
+for j in range(1,total_weight+1):
+	if weight[0]<j:
+		dp[0][j] = value[0]
+	else:
+		dp[0][j] = 0
+```
+
+### 完全背包
+
+有N件物品和一个最多能背重量为W的背包。第i件物品的重量是weight[i]，得到的价值是value[i] 。**每件物品都有无限个（也就是可以放入背包多次）**，求解将哪些物品装入背包里物品价值总和最大。
+
+**完全背包和01背包问题唯一不同的地方就是，每种物品有无限件**
+
+原始0-1背包代码
+
+```java
+for(int i = 0; i < weight.size(); i++) { // 遍历物品
+    for(int j = bagWeight; j >= weight[i]; j--) { // 遍历背包容量
+        dp[j] = max(dp[j], dp[j - weight[i]] + value[i]);
+    }
+}
+```
+
+完全背包代码
+
+```java
+// 01背包内嵌的循环是从大到小遍历，为了保证每个物品仅被添加一次。
+// 而完全背包的物品是可以添加多次的，所以要从小到大去遍历，即：
+for(int i = 0; i < weight.size(); i++) { // 遍历物品
+    for(int j = weight[i]; j <= bagWeight ; j++) { // 遍历背包容量
+        dp[j] = max(dp[j], dp[j - weight[i]] + value[i]);
+    }
+}
+```
+
+#### 求组合数
+
+```python
+# 给你一个由不同整数组成的数组nums ，和一个目标整数target 。请你从nums中找出并返回总和为target的元素组合的个数。
+# 题目数据保证答案符合32位整数范围。
+本题求组合数：就是外层for循环遍历物品，内层for遍历背包
+如果把遍历nums（物品）放在外循环，遍历target的作为内循环的话，举一个例子：计算dp[4]的时候，结果集只有 {1,3} 这样的集合，不会有{3,1}这样的集合，因为nums遍历放在外层，3只能出现在1后面
+# 示例1：
+# 输入：nums = [1, 2, 3], target = 4
+# 输出：7
+# 解释：
+# 所有可能的组合为：
+# (1, 1, 1, 1)
+# (1, 1, 2)
+# (1, 2, 1)
+# (1, 3)
+# (2, 1, 1)
+# (2, 2)
+# (3, 1)
+# 请注意，顺序不同的序列被视作不同的组合。
+# 示例2：
+# 输入：nums = [9], target = 3
+# 输出：0
+dp = [0] * (target + 1)
+dp[0] = 1
+for j in range(1, target + 1, 1):
+    for num in nums:
+        if j >= num:
+             dp[j] += dp[j - num]
+return dp[target]
+```
+
+
+
+#### 求排列数
+
+```python
+# 给你一个整数数组coins表示不同面额的硬币，另给一个整数amount表示总金额。
+# 请你计算并返回可以凑成总金额的硬币组合数。如果任何硬币组合都无法凑出总金额，返回0。
+# 假设每一种面额的硬币有无限个。题目数据保证结果符合32位带符号整数。
+本题是求排列数（（2,2,1）和（2,1,2）算一种）：就是外层for遍历背包，内层for循环遍历物品。
+# 示例1：
+# 输入：amount = 5, coins = [1, 2, 5]
+# 输出：4
+# 解释：有四种方式可以凑成总金额：
+# 5 = 5
+# 5 = 2 + 2 + 1
+# 5 = 2 + 1 + 1 + 1
+# 5 = 1 + 1 + 1 + 1 + 1
+# 示例2：
+# 输入：amount = 3, coins = [2]
+# 输出：0
+# 解释：只用面额2的硬币不能凑成总金额3。
+# 示例3：
+# 输入：amount = 10, coins = [10]
+# 输出：1
+class Solution(object):
+    def change(self, amount, coins):
+        """
+        :type amount: int
+        :type coins: List[int]
+        :rtype: int
+        """
+        # dp[j]：凑成总金额j的货币组合数为dp[j]
+        dp = [0] * (amount + 1)
+        dp[0] = 1
+        for i in range(len(coins)):
+            for j in range(coins[i], amount + 1, 1):
+                dp[j] += dp[j-coins[i]]
+        return dp[amount]
+```
+
+
+
+#### 
