--- a/算法/动态规划.md
+++ b/算法/动态规划.md
@@ -65,7 +65,7 @@ for(int i = 0; i < weight.size(); i++) { // 遍历物品
 ```python
 # 给你一个由不同整数组成的数组nums ，和一个目标整数target 。请你从nums中找出并返回总和为target的元素组合的个数。
 # 题目数据保证答案符合32位整数范围。
-本题求组合数：就是外层for循环遍历物品，内层for遍历背包
+本题求组合数：就是外层for循环遍历背包，内层for遍历物品
 如果把遍历nums（物品）放在外循环，遍历target的作为内循环的话，举一个例子：计算dp[4]的时候，结果集只有 {1,3} 这样的集合，不会有{3,1}这样的集合，因为nums遍历放在外层，3只能出现在1后面
 # 示例1：
 # 输入：nums = [1, 2, 3], target = 4
@@ -100,7 +100,7 @@ return dp[target]
 # 给你一个整数数组coins表示不同面额的硬币，另给一个整数amount表示总金额。
 # 请你计算并返回可以凑成总金额的硬币组合数。如果任何硬币组合都无法凑出总金额，返回0。
 # 假设每一种面额的硬币有无限个。题目数据保证结果符合32位带符号整数。
-本题是求排列数（（2,2,1）和（2,1,2）算一种）：就是外层for遍历背包，内层for循环遍历物品。
+本题是求排列数（（2,2,1）和（2,1,2）算一种）：就是外层for遍历物品，内层for循环遍历背包。
 # 示例1：
 # 输入：amount = 5, coins = [1, 2, 5]
 # 输出：4
