--- a/深度学习/李沐ML/池化层.md
+++ b/深度学习/李沐ML/池化层.md
@@ -10,7 +10,9 @@
 
 默认情况下，(**深度学习框架中的步幅与汇聚窗口的大小相同**)。
 
-可以返回窗口中最大或者平均值，**一般作用在卷积层后面**，输入通道=输出通道
+可以返回窗口中最大或者平均值，
+
+，输入通道=输出通道
 
 **缓解卷积层对位置的敏感性：**如果卷积输出向左或者向右偏移1个单位，原本为1的列会变成0，经过池化层可以容忍1个像素的偏移。
 
