--- a/深度学习/ML/nlp/编码器和解码器.md
+++ b/深度学习/ML/nlp/编码器和解码器.md
@@ -1,9 +1,113 @@
 ### 编码器
 
-文本表示成向量
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-12_10-28-53.png)
+
+#### 1. 输入部分
+
+##### 1.1 embedding
+
+##### 1.2 位置编码
+
+pos代表的是绝对位置信息
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_16-12-51.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_16-14-17.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_16-25-12.png)
+
+相对位置信息
+
+为什么用sin，cos来做位置信息？
+
+假设有两个位置 pos1和 pos2，如果它们之间的距离是 k，那么它们的位置编码之间的关系只取决于 k，而与 pos1和 pos2 的具体值无关。这种性质使得位置编码能够很好地捕捉到序列中元素的相对位置关系
+
+#### 2. 掩码张量
+
+##### 2.1 什么是掩码张量
+
+- 掩代表遮掩，码就是我们张量中的数值，它的尺寸不定，里面一般只有1和0的元素，代表位置被遮掩或者不被遮掩，至于是0位置被遮掩还是1位置被遮掩可以自定义，因此它的作用就是让另外一个张量中的一些数值被遮掩，也可以说被替换, 它的表现形式是一个张量.
+
+##### 2.2 掩码张量的作用
+
+- 在transformer中, 掩码张量的主要作用在应用attentio时，**有一些生成的attention张量中的值计算有可能已知了未来信息而得到的**，未来信息被看到是因为训练时会把整个输出结果都一次性进行Embedding，**但是理论上解码器的的输出却不是一次就能产生最终结果的**，而是一次次通过上一次结果综合得出的，因此，未来的信息可能被提前利用. 所以会进行遮掩. 关于解码器的有关知识将在后面的章节中讲解.
+
+  ![](D:\学习笔记\深度学习\L\Snipaste_2024-10-12_16-23-29.png)
+
+#### 3. 注意力机制
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-31-14.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-32-32.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-34-34.png)
+
+##### 3.1 **如何获取Q,K,V矩阵**
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-36-12.png)
+
+##### 3.2 计算Attention Value
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-38-44.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-40-01.png)
+
+
+
+**多头注意力就是有多个Wq，Wk，Wv矩阵，相当于把原始信息放到多个空间，捕捉多个子空间信息**
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-39-28.png)
+
+#### 4. 前馈神经网络
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-55-02.png)
+
+#### 5. 残差
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-27-27.png)
+
+
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-29-07.png)
+
+##### 5.1 Batch Normalization vs. Layer Normalization
+
+Batch Normalization在nlp任务一般不用
+
+样本同一维度进行处理，这样是假设样本每一维度代表的含义相同
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-37-23.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-38-35.png)
+
+##### 5.2 BN的缺点：
+
+1.batch_size较小的时候效果较差
+
+2.在RNN任务效果较差，输入是动态的 对第一个单词做均值方差，对第二个单词做均值方差......
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-41-36.png)
+
+#### 6. Layer Normalization
+
+对一个样本的所有单词做缩放
 
 ### 解码器
 
 向量表示成输出
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_20-59-27.png)
+
+
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_21-01-08.png)
+
+![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_21-04-02.png)
+
+
+
+
+
+
 
 ![](D:\学习笔记\深度学习\L\Snipaste_2024-08-01_01-37-44.jpg)
