--- a/深度学习/ML/nlp/编码器和解码器.md
+++ b/深度学习/ML/nlp/编码器和解码器.md
@@ -42,6 +42,20 @@ pos代表的是绝对位置信息
 
 ![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-34-34.png)
 
+Q,K,V:
+
+对一段文本使用关键词进行描述，
+
+整个文本看作query，预先作为提示的关键词看作key， value为看到这段文本脑子复现的信息
+
+key和value基本相同（开始的提示和脑子的思考基本相同），随着注意力作用，value开始变化，根据提示key生成query关键词value的方法
+
+输入一般：key和value相同，与query不同
+
+自注意力：key和query和value都相同，用文本自身表达自身，对文本自身做特征提取
+
+
+
 ##### 3.1 **如何获取Q,K,V矩阵**
 
 ![](D:\学习笔记\深度学习\L\Snipaste_2024-10-10_19-36-12.png)
