--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -160,7 +160,10 @@ public class VariableLengthArgument {
 子类可以拥有自己属性和方法，即子类可以对父类进行扩展。 
 子类可以用自己的方式实现父类的方法。
 
-多态：具体表现为父类的引用指向子类的实例
+多态：同一个接口或父类引用变量可以指向不同的对象实例，并根据实际指向的对象类型执行相应的方法。
+编译时多态：通过方法重载实现，在编译时确定方法调用
+运行时多态：通过方法重写实现，在运行时确定方法调用
+    
 ```
 
 #### 16.抽象类和接口的相同点和不同点
