--- a/算法/回溯算法.md
+++ b/算法/回溯算法.md
@@ -16,6 +16,8 @@
 
 ​	可以将其抽象为树形结构，在集合中递归查找子集，**集合的大小就构成了树的宽度，递归的深度，都构成的树的深度**。
 
+![](D:\学习笔记\算法\photos\Snipaste_2024-12-18_10-40-20.png)
+
 #### 3.回溯算法模板
 
 返回值一般为空
@@ -66,3 +68,32 @@ void backtracking(参数) {
 491：求递增子序列
 
 ![](D:\学习笔记\算法\photos\Snipaste_2024-02-28_22-38-32.png)
+
+#### 4.子集
+
+![](D:\学习笔记\算法\photos\Snipaste_2024-12-18_17-24-27.png)
+
+```java
+public class Solution_78SubSet {
+    List<List<Integer>> ans = new ArrayList<>();
+    List<Integer> path = new ArrayList<>();
+
+    public List<List<Integer>> subsets(int[] nums) {
+        dfs(0, nums.length, nums);
+        return ans;
+    }
+
+    public void dfs(int i, int length, int[] nums) {
+        if (i == length) {
+            ans.add(new ArrayList<>(path));  //python中应为ans.append(path.copy()) 因为path是动态变化的
+            return;
+        }
+        //不选nums[i]直接递归
+        dfs(i + 1, length, nums);
+        path.add(nums[i]);
+        dfs(i + 1, length, nums);
+        path.remove(path.size() - 1);
+    }
+}
+```
+
