--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -294,3 +294,50 @@ java的动态绑定机制
 2.当调用对象属性时，该属性会和对象的声明类型（编译类型）进行绑定，而不是运行类型
 ```
 
+#### 27.**静态内部类和匿名内部类有什么区别吗？**（能否访问外部类的静态和非静态变量、生命周期、实例化方式、使用场景）
+
+**静态内部类**是定义在另一个类内部的类，并且使用`static`关键字修饰。它就像是类的一个静态成员，不依赖于外部类的实例，就像下面的例子中，`StaticInnerClass`可以直接访问`OuterClass`的`outerStaticVar`静态变量。
+
+1.静态内部类**不能直接访问外部类的非静态成员**，因为**非静态成员是依赖于外部类的实例存在的**。如果要访问外部类的非静态成员，需要通过外部类的实例来访问。
+
+2.静态内部类的生命周期与外部类的静态成员相似。它在外部类加载时不会自动加载，只有在第一次被使用（例如，通过`new`关键字创建实例或者访问静态成员）时才会加载。
+
+3.实例化静态内部类时，不需要外部类的实例。可以直接通过`外部类名.静态内部类名`的方式来创建实例
+
+适用场景：当一个类只与另一个类有**比较紧密的关联**，并且主要是为了**辅助外部类完成某些功能，同时又不依赖于外部类的实例时**，适合使用静态内部类。例如，一个工具类中的一些工具方法可以组织成静态内部类，这些方法可能会共享一些外部类的静态资源。静态内部类还可以用于实现单例模式。通过将单例对象的实例化放在静态内部类中，可以保证在第一次访问单例对象时才进行实例化，并且保证了线程安全。
+
+```java
+class OuterClass {
+    private static int outerStaticVar = 10;
+    static class StaticInnerClass {
+        public void printOuterStaticVar() {
+            System.out.println(outerStaticVar);
+        }
+    }
+}
+```
+
+**匿名内部类**是一种没有名字的内部类。它是在**创建对象的同时定义类的一种方式**，通常用于只需要使用一次的类，并且是**作为某个接口或者抽象类的实现**（或者某个类的子类）出现。在下面实现接口的例子中，匿名内部类是在`main`方法内部定义的，它的行为可能会受到`main`方法中的其他变量或者外部类的状态的影响。
+
+```java
+interface MyInterface {
+    void myMethod();
+}
+class Main {
+    public static void main(String[] args) {
+        MyInterface anonymousClass = new MyInterface() {
+            @Override
+            public void myMethod() {
+                System.out.println("This is an anonymous class implementing MyInterface");
+            }
+        };
+        anonymousClass.myMethod();
+    }
+}
+```
+
+1.匿名内部类可以访问外部类的成员变量和方法，包括静态和非静态的。
+
+2.匿名内部类的生命周期取决于它的使用场景。如果它是在一个方法内部定义的，那么当方法执行结束后，只要没有其他引用指向这个匿名内部类的对象，它就会被垃圾回收。如果它是作为一个类的成员变量定义的，那么它的生命周期会和这个类的对象生命周期相关。
+
+3.匿名内部类在定义的同时就会被实例化，并且只能创建一个实例。
