--- a/java/面试/java集合/常见问题.md
+++ b/java/面试/java集合/常见问题.md
@@ -95,7 +95,7 @@ BlockingQueue（阻塞队列）是一个接口，继承自 Queue。BlockingQueue
 
 #### 8.Map**
 
-#### HashMap 和 Hashtable 的区别 
+#### HashMap 和 Hashtable 的区别 ***
 
 ```java
 1.线程是否安全： HashMap 是非线程安全的，Hashtable 是线程安全的,因为 Hashtable 内部的方法基本都经过synchronized 修饰。
