--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -178,17 +178,17 @@ N：拟写入的新值(New)
 它的功能就是一次只原子地修改一个变量。当操作涉及跨多个共享变量时 CAS 无效
 ```
 
-#### 13.synchronized 关键字
+#### 13.synchronized 关键字***
 
 ```java
 主要解决的是多个线程之间访问资源的同步性，可以保证被它修饰的方法或者代码块在任意时刻只能有一个线程执行。
 使用方法：
-1.修饰实例方法(锁当前对象实例)
+1.修饰实例方法(锁当前对象实例)：这意味着同一时刻，对于同一个对象实例，只有一个线程能够执行这个对象的synchronized非静态方法。
 给当前对象实例加锁，进入同步代码前要获得 当前对象实例的锁。
 synchronized void method() {
     //业务代码
 }
-2.修饰静态方法(锁当前类)
+2.修饰静态方法(锁当前类)：因为静态方法是属于类的，而不是属于某个具体的对象实例。所以同一时刻，对于一个类的所有实例，只有一个线程能够执行这个类的synchronized静态方法。
 给当前类加锁，会作用于类的所有对象实例 ，进入同步代码前要获得 当前 class 的锁。
 synchronized static void method() {
     //业务代码
@@ -202,13 +202,36 @@ synchronized 同步语句块(synchronized(this))的实现使用的是 monitorent
 synchronized 修饰的方法并没有 monitorenter 指令和 monitorexit 指令，取得代之的确实是 ACC_SYNCHRONIZED 标识，该标识指明了该方法是一个同步方法
 ```
 
-#### 13.1 Java单机并发控制
+##### 13.1 Java单机并发控制
 
 同步方法synchronized
 
 同步块 synchronized
 
 重入锁 ReentrantLock
+
+##### 13.2**两个方法都被synchronized修饰，其中一个调用另一个可以成功嘛？synchronized修饰方法锁的那一部分？**
+
+如果两个方法都被`synchronized`修饰，一个方法内部调用另一个方法是可以成功的。这是因为`synchronized`方法**默认是对当前对象（`this`）加锁**。当一个线程进入了一个`synchronized`方法，它已经获得了该对象的锁，在这个方法内部调用另一个`synchronized`方法时，由于是同一个对象的锁，所以线程可以继续执行被调用的`synchronized`方法，不会出现锁竞争导致无法调用的情况。
+
+例如下面的代码，`method1`调用`method2`时，因为它们都是同一个对象`example`的`synchronized`方法，所以可以正常执行。
+
+```java
+public class SynchronizedExample {
+    public synchronized void method1() {
+        System.out.println("Method 1 started");
+        method2();
+        System.out.println("Method 1 ended");
+    }
+    public synchronized void method2() {
+        System.out.println("Method 2 is running");
+    }
+    public static void main(String[] args) {
+        SynchronizedExample example = new SynchronizedExample();
+        example.method1();
+    }
+}
+```
 
 #### 14.可中断锁和不可中断锁
 
