--- a/算法/动态规划.md
+++ b/算法/动态规划.md
@@ -132,6 +132,37 @@ class Solution(object):
         return dp[amount]
 ```
 
+#### 打家劫舍（选或不选）
 
+![](D:\学习笔记\算法\photos\Snipaste_2025-01-09_19-51-45.png)
 
-#### 
+```java
+    int[] nums;
+    int n;
+    int[] caches;//用于记录，防止多余运算
+    /**
+    dfs(i)表示从前i个房子打劫到的最大值
+     */
+    public int dfs(int i){
+        if(i<0){
+            return 0;
+        }
+        if(caches[i]!=-1){
+            return caches[i];
+        } 
+        int res = Math.max(dfs(i-1),dfs(i-2)+nums[i]); //状态方程
+        caches[i] = res;
+        return res;
+
+    }
+    public int rob(int[] nums) {
+        this.nums = nums;
+        this.n = nums.length;
+        caches = new int[n];
+        for(int i=0;i<n;i++){
+            caches[i] = -1;
+        }
+        return dfs(n-1);
+    }
+```
+
