--- a/算法/回溯算法.md
+++ b/算法/回溯算法.md
@@ -97,3 +97,45 @@ public class Solution_78SubSet {
 }
 ```
 
+#### 5.排列问题
+
+全排列
+
+![](D:\学习笔记\算法\photos\Snipaste_2025-01-03_15-05-17.png)
+
+```java
+    private List<List<Integer>> ans = new ArrayList<>();
+    private List<Integer> path = null;
+    private List<Boolean> choose = null;
+    int n;
+
+    public void dfs(int i, List<Boolean> choose,int[] nums) {
+        if (i == n) {
+            ans.add(new ArrayList<>(path));
+            return;
+        }
+
+        for (int j = 0; j < n; j++){
+            if (!choose.get(j)) {
+                choose.set(j, true);
+                path.set(i, nums[j]);
+                dfs(i + 1, choose, nums);
+                choose.set(j, false); //恢复现场
+            }
+        }
+    }
+
+    public List<List<Integer>> permute(int[] nums) {
+        n = nums.length;
+        path = Arrays.asList(new Integer[nums.length]);  // 初始化一个可变大小的路径列表
+        choose = Arrays.asList(new Boolean[nums.length]);
+        for (int i = 0; i < choose.size(); i++){
+            choose.set(i, false);
+        }
+
+        dfs(0, choose,nums);
+
+        return ans;
+    }
+```
+
