--- a/MySQL/事务.md
+++ b/MySQL/事务.md
@@ -60,6 +60,8 @@ set autocommit=false 默认是 on
 
 #### 5.mvcc是什么，解决了什么问题
 
+​	MVCC (Multi-version Concurency Control，**多版本并发控制**)是一种并发控制机制，允许多个事务同时读取和写入数据库，而无需互相等待，从而提高数据库的并发性能。在 MVCC中，数据库为每个事务创建一个数据快照，每当数据被修改时，MYSQL不会立即覆盖原有数据，而是生成新版本的记录，每个记录都保留了对应的版本号或时间戳,多版本之间串联起来就形成了一条版本链，这样不同时刻启动的事务可以无锁地获得不同版本的数据(普通读)。此时读(普通读)写操作不会阻塞。写操作可以继续写，无非就是会创建新的数据版本(但只有在事务提交后，新版本才会对其他事务可见。未提交的事务修改不会影响其他事务的读取，历史版本记录可供已经启动的事务读取。
+
 ​	MVCC 是 MySQL InnoDB 引擎用于控制数据并发访问的协议。MVCC 主要是借助于版本链来实现的。在 InnoDB 引擎里面，每一行都有两个额外的列，一个是 trx_id，代表的是修改这一行数据的事务 ID。另外一个是 roll_ptr，代表的是回滚指针。InnoDB 引擎通过回滚指针，将数据的不同版本串联在一起，也就是版本链。这些串联起来的历史版本，被放到了 undolog 里面。当某一个事务发起查询的时候，MVCC 会根据事务的隔离级别来生成不同的 Read View，从而控制事务查询最终得到的结果。
 
 ​	主要解决读写并发的问题，只用锁效率太低
@@ -72,7 +74,7 @@ set autocommit=false 默认是 on
 
   next-key lock可以解决删除操作而引发的幻读问题：
 
-  ​
+  
 
   **如果 update 语句的 where 条件没有用到索引列，那么就会全表扫描**
 
