--- a/java/面试/jvm/常见问题.md
+++ b/java/面试/jvm/常见问题.md
@@ -102,6 +102,26 @@ GC 其实准确分类只有两大种：
 2.每个 Java 类都有一个引用指向加载它的 ClassLoader。
 3.数组类不是通过 ClassLoader 创建的（数组类没有对应的二进制字节流），是由 JVM 直接生成的。
 "类加载器的主要作用就是加载 Java 类的字节码（ .class 文件）到 JVM 中（在内存中生成一个代表该类的 Class 对象）。"
+
+1.加载（Loading）：
+从文件系统、网络或其他来源读取类的二进制数据。
+将类的静态信息存入方法区（如类名、字段、方法等）。
+创建一个java.lang.Class对象，作为方法区中类信息的访问入口。
+2.验证（Verification）：
+确保加载的类信息符合JVM规范，例如：
+类的结构是否正确。
+是否有非法的字节码指令。
+是否存在危险的代码。
+3.准备（Preparation）：
+为类的/*静态变量*/分配内存，并设置默认初始值（如int类型默认为0）。
+此时静态变量尚未执行初始化代码块。
+4.解析（Resolution）：
+将常量池中的符号引用转换为直接引用。
+符号引用是以字符串形式表示的类、接口、字段和方法的引用。
+直接引用是直接指向内存中的地址。
+5.初始化（Initialization）：
+执行类的初始化代码块（static {}）和静态变量的赋值操作。
+是类加载过程的最后一个阶段，也是用户代码可以控制的阶段。
 ```
 
 ##### 类加载器加载规则
