--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -101,7 +101,7 @@ volatile 的作用：
 //双重校验锁实现对象单例
 public class Singleton {
 
-    private volatile static Singleton uniqueInstance;
+    private static volatile  Singleton uniqueInstance;
 
     private Singleton() {
     }
@@ -428,3 +428,33 @@ public class AwaitExample {
 实现Runnable接口
 
 实现Callable接口通过FutureTask包装器创建
+
+#### 24.Java中锁的分类
+
+乐观锁：假设每次访问共享资源时不会发生冲突，因此在访问资源时不会加锁，而是在更新时检查是否有冲突。（读多写少）
+
+**实现方式：**
+
+```
+1.版本号机制：在数据表中加上一个数据版本号 Version 字段，表示数据被修改的次数，当数据被修改时，Version 值会加一，当数据要更新时，会读取 Version 值，在提交更新时，如果 Version 值和原来读取到的相等才会更新，否则会自旋重试更新操作，直到成功。
+2.CAS算法：（Compare And Swap)比较并且交换，将预期值和要更新的变量值进行比较，只有两者相等才会进行更新。
+检测对应资源是否被其他线程改变
+```
+
+悲观锁：假设每次访问共享资源时都会发生冲突，因此在访问资源前会先加锁。（写多读少）**因为乐观锁的自旋和重试会导致 CPU 的升高，同样也会影响性能。**
+
+**实现方式：**
+
+```
+1.synchronized
+2.ReentrantLock
+```
+
+自旋锁：线程在获取锁失败时，不会阻塞，而是通过循环不断尝试获取锁。
+
+**实现方式：**
+
+```
+CAS操作
+```
+
