--- a/java/面试/java集合/常见问题.md
+++ b/java/面试/java集合/常见问题.md
@@ -136,12 +136,37 @@ TreeMap 和HashMap 都继承自AbstractMap ，但是需要注意的是TreeMap它
 
 ![](D:\学习笔记\java\pictures\Snipaste_2023-12-16_17-13-30.png)
 
+#### HashMap会有哪些问题
+
+```
+HashMap 不是线程安全的。在多线程环境下，多个线程同时修改 HashMap 可能导致数据不一致或死循环等问题。
+
+业务场景：例如在电商系统中，多个用户同时下单，库存的扣减操作可能会同时修改库存数据。如果使用 HashMap 来存储库存信息，可能会导致库存数据错误。
+```
+
 #### HashMap多线程导致死循环的问题
 
 ```
-JDK1.7 及之前版本的 HashMap 在多线程环境下扩容操作可能存在死循环问题，这是由于当一个桶位中有多个元素需要进行扩容时，多个线程同时对链表进行操作，头插法可能会导致链表中的节点指向错误的位置，从而形成一个环形链表，进而使得查询元素的操作陷入死循环无法结束。  
-为了解决这个问题，JDK1.8 版本的 HashMap 采用了尾插法而不是头插法来避免链表倒置，使得插入的节点永远都是放在链表的末尾，避免了链表中的环形结构。
+1.7版本：
+HashMap 的底层是一个数组，数组中的每个元素是一个链表（Java 7 中是单向链表）。
+当 HashMap 的容量达到阈值时，会触发扩容操作，创建一个新的数组，并将旧数组中的元素重新散列到新数组中。
+在重新散列的过程中，链表的顺序会被反转（即头插法）。
+如果两个线程同时进行扩容操作，可能会导致链表中的节点互相引用，形成环形链表。
+当后续的 get 或 put 操作遍历到这个环形链表时，就会进入死循环。
+JDK1.8 版本的 HashMap 采用了尾插法而不是头插法来避免链表倒置，使得插入的节点永远都是放在链表的末尾，避免了链表中的环形结构。
 ```
+
+初始状态（假设有两个线程对hashmap进行扩容）
+
+![](D:\学习笔记\java\pictures\Snipaste_2025-03-07_03-16-39.jpg)
+
+![Snipaste_2025-03-07_03-17-16](D:\学习笔记\java\pictures\Snipaste_2025-03-07_03-17-16.jpg)
+
+![Snipaste_2025-03-07_03-17-23](D:\学习笔记\java\pictures\Snipaste_2025-03-07_03-17-23.jpg)
+
+本来table[19]的内容应该为<86,C>-><48,B><18,A>->null,但是现在成环
+
+![Snipaste_2025-03-07_03-17-36](D:\学习笔记\java\pictures\Snipaste_2025-03-07_03-17-36.jpg)
 
 #### HashMap的遍历方式
 
@@ -257,5 +282,30 @@ map.putIfAbsent(key, value);
 // 线程 B
 map.putIfAbsent(key, anotherValue);
 ConcurrentHashMap 提供了一些原子性的复合操作，如 putIfAbsent、compute、computeIfAbsent 、computeIfPresent、merge等
+```
+
+#### `ConcurrentHashMap` 的 `get` 和 `put` 操作是否上锁？
+
+```java
+1.get 操作：无锁
+ConcurrentHashMap 的 get 操作是无锁的，它不会阻塞其他线程的读写操作。
+这是因为 get 操作只是读取数据，不会修改数据结构，因此不需要加锁。
+实现原理：
+get 操作通过 volatile 关键字 和 CAS（Compare-And-Swap） 来保证可见性和原子性。
+ConcurrentHashMap 的节点（Node）中的 value 字段是 volatile 的，确保线程能够读取到最新的值。
+优点：
+无锁设计使得 get 操作的性能非常高，适合读多写少的场景。
+2. put 操作：部分上锁
+2.1分段锁（Java 7）：
+在 Java 7 中，ConcurrentHashMap 使用分段锁（Segment）来实现线程安全。
+每个 Segment 是一个独立的/*哈希表，拥有自己的锁*/。
+当执行 put 操作时，只会锁住对应的 Segment，而不是整个表，从而提高了并发性能。
+2.2CAS + synchronized（Java 8）：
+在 Java 8 中，ConcurrentHashMap 移除了分段锁，改为使用 CAS + synchronized 来实现线程安全。
+具体实现：
+如果目标桶为空，则使用 CAS 操作插入新节点。
+如果目标桶不为空，则使用 synchronized 锁住桶的头节点，然后进行插入或更新操作。
+优点：
+Java 8 的实现进一步提高了并发性能，减少了锁的粒度（从分段锁到桶级别锁）。
 ```
 
