--- a/MySQL/日志.md
+++ b/MySQL/日志.md
@@ -12,6 +12,14 @@ redo log的作用：
 
 ​	binlog 文件是记录了所有数据库表结构变更和表数据修改的日志，不会记录查询类的操作，比如 SELECT 和 SHOW 操作。
 
+### bin log
+
+用于记录所有对数据库执行的**写操作**（如`INSERT`、`UPDATE`、`DELETE`等），但不记录`SELECT`操作。`binlog`的主要作用是：
+
+1. **数据恢复**：通过`binlog`可以恢复数据库到某个时间点的状态。
+2. **主从复制**：`binlog`是实现MySQL主从复制的核心，主库将`binlog`发送给从库，从库重放这些日志以实现数据同步。
+3. **审计**：可以通过`binlog`追踪数据库的变更历史。
+
 #### redo log 和 binlog 有什么区别？
 
 1、适用对象不同：
