--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -163,11 +163,17 @@ AOF在Redis的配置文件中进行配置：applyonly字段no改为yes
 
 #### 30.Redis作消息队列
 
+## ***Redis如何做分布式锁**
+
 #### 31.分布式锁的要点
 
 加锁的时候要设置owner和过期时间，owner用来确定锁的拥有者，过期时间用来兜底应对异常情况
 
 解锁的时候要先判断owner是不是自己的，是自己的再释放。这两部操作要保证原子性。
+
+## *Zset的底层结构
+
+
 
 #### 32.缓存异常
 
