--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -96,7 +96,31 @@ volatile 的作用：
 1.volatile 关键字能保证数据的可见性，但不能保证数据的原子性。synchronized 关键字两者都能保证。
 2.可以防止 JVM 的指令重排序。 如果我们将变量声明为 volatile ，在对这个变量进行读写操作的时候，会通过插入特定的 内存屏障 的方式来禁止指令重排序。
 	写操作：在写 volatile 变量后插入写屏障，确保之前的操作不会被重排序到写之后。
+    volatile boolean flag = false;
+	int data = 0;
+
+	// 线程A
+	data = 42;       // 1
+	flag = true;     // 2
+
+	// 线程B
+	if (flag) {      // 3
+    	int temp = data; // 4
+	}
+	如果没有禁止指令重排序，线程A中的指令1和2可能会被重排序，导致线程B看到flag = true，但data仍然是0，而不是42。使用volatile修饰flag可以禁止这种重排序，确保线程B看到的data值是线程A修改后的值。
 	读操作：在读 volatile 变量前插入读屏障，确保后续操作不会被重排序到读之前。
+    volatile boolean ready = false;
+	int data = 0;
+
+	// 线程A
+	data = 42;       // 1. 设置data为42
+	ready = true;    // 2. 设置ready为true
+
+	// 线程B
+	if (ready) {     // 3. 检查ready是否为true
+    	int x = data; // 4. 读取data的值
+	}
+	如果没有读屏障，线程B中的操作可能会被乱序执行，比如：先读取data（操作4）；再检查ready是否为true（操作3）。这样一来，线程B可能会在ready为false时就读取data，导致程序逻辑出错。
 ```
 
 ```java
