--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -173,7 +173,28 @@ AOF在Redis的配置文件中进行配置：applyonly字段no改为yes
 
 ## *Zset的底层结构
 
+**1.ziplist**
 
+保存的所有字符串长度小于64B
+
+保存个数小于128个
+
+**2.跳跃表（Skip List） 和 哈希表（Hash Table）。**
+
+任一条件不满足用skipList和hash
+
+- **元素唯一**：每个元素都是唯一的，类似于 Set。
+- **有序性**：元素按照分数（score）排序，类似于有序列表。
+
+跳表：
+
+​	每层链表均有序
+
+hash表：
+
+​	哈希表用于存储元素和分数的映射关系。
+
+![](D:\学习笔记\java\pictures\Snipaste_2025-03-11_01-48-27.png)
 
 #### 32.缓存异常
 
