--- a/java/面试/jvm/常见问题.md
+++ b/java/面试/jvm/常见问题.md
@@ -146,3 +146,29 @@ GC 其实准确分类只有两大种：
 4.如果子类加载器也无法加载这个类，那么它会抛出一个 ClassNotFoundException 异常。
 ```
 
+#### 4.Full GC是什么，什么时候会发生？
+
+​	Full GC是 Java 垃圾回收机制中的一种全局垃圾回收行为，它会清理整个堆内存（包括年轻代、老年代和元空间/永久代）。
+
+##### **Full GC的触发条件：**
+
+- **老年代空间不足：**当老年代的空间不足以容纳从年轻代晋升的对象时，会触发 Full GC。
+- **元空间（Metaspace）或永久代（PermGen）空间不足：**主要用于存储类的元数据（如类名、方法信息、字段信息等、常量池、静态变量）
+- **调用System.gc()**
+
+##### 如何进行监控：
+
+- **JVM 日志**：查看GC日志查看 Full GC 的发生频率和耗时。
+
+  ```java
+  -Xloggc:/path/to/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps
+  ```
+
+- **JVM 监控工具**：
+
+  - 使用 `jstat`、`jvisualvm`、`jconsole` 等工具监控堆内存和 GC 情况。
+    - 通过 **内存** 标签页可以实时监控堆内存的使用情况。
+    - 通过 **VM 摘要** 和 **MBean** 标签页可以查看 GC 的详细数据。
+
+#### 5.JVM调优
+
