--- a/MySQL/索引.md
+++ b/MySQL/索引.md
@@ -37,6 +37,45 @@
 1. 覆盖多个查询条件，如（a，b）索引可以覆盖查询 a = ? 或者 a = ? and b = ?；
 2. 避免 SQL 的额外排序，提升 SQL 性能，如 WHERE a = ? ORDER BY b 这样的查询条件；
 
+#### 组合索引的执行流程
+
+- **索引生效**：查询条件匹配了组合索引的最左前缀 `(last_name, first_name)`。
+- **执行流程**：
+  1. 在索引中查找 `last_name = 'Smith'`。
+  2. 在匹配的 `last_name` 中进一步查找 `first_name = 'John'`。
+  3. 返回匹配的行。
+
+#### 假设有组合索引（a,b,c）,查询条件是a=10 AND b>20 AND c=10，为什么b列可以使用索引而c列不能使用，具体原因是什么
+
+假设表数据如下：
+
+| a    | b    | c    |
+| :--- | :--- | :--- |
+| 10   | 15   | 5    |
+| 10   | 20   | 10   |
+| 10   | 25   | 15   |
+| 10   | 30   | 10   |
+| 20   | 10   | 5    |
+| 20   | 20   | 10   |
+
+首先根据a=10定位数据：
+
+​	定位到 `a=10` 的叶子节点范围：`[(10, 15, 5), (10, 20, 10), (10, 25, 15), (10, 30, 10)]`。
+
+根据b>20过滤数据（因为在 `a=10` 的基础上，`b` 列的值是有序的）：
+
+​	找到符合条件的记录：`[(10, 25, 15), (10, 30, 10)]`。（此时打破了c列的有序性）
+
+无法使用c=10过滤数据：
+
+​	在 B+ 树中，范围条件之后的列（即 `c` 列）无法被直接使用，因为索引是按照 `(a, b, c)` 的顺序存储的，`b` 列的范围条件使得 `c` 列的值不再有序。
+
+​	**数据库只能扫描 `b>20` 的所有记录，然后逐条检查 `c=10` 的条件。**
+
+#### 没有索引和有索引的执行流程
+
+没有索引时，数据库只能通过 **全表扫描（Full Table Scan）** 的方式来查找数据。
+
 #### 索引失效
 
 - 当我们使用左或者左右模糊匹配的时候，也就是 `like %xx` 或者 `like %xx%`这两种方式都会造成索引失效；
@@ -46,4 +85,3 @@
 - 联合索引要能正确使用需要遵循最左匹配原则，也就是按照最左优先的方式进行索引的匹配，否则就会导致索引失效。
 - 在 WHERE 子句中，如果在 OR 前的条件列是索引列，而在 OR 后的条件列不是索引列，那么索引会失效。
 
-**为什么有最左匹配原则**
