--- a/MySQL/锁.md
+++ b/MySQL/锁.md
@@ -1,4 +1,4 @@
-​	如果两个事务分别向对方持有的间隙锁范围内插入一条记录，而插入操作为了获取到插入意向锁，都在等待对方事务的间隙锁释放，于是就造成了循环等待，满足了死锁的四个条件：**互斥、占有且等待、不可强占用、循环等待**，因此发生了死锁。
+	如果两个事务分别向对方持有的间隙锁范围内插入一条记录，而插入操作为了获取到插入意向锁，都在等待对方事务的间隙锁释放，于是就造成了循环等待，满足了死锁的四个条件：**互斥、占有且等待、不可强占用、循环等待**，因此发生了死锁。
 
 ​	**间隙锁的意义只在于阻止区间被插入**，因此是可以共存的。**一个事务获取的间隙锁不会阻止另一个事务获取同一个间隙范围的间隙锁**
 
@@ -9,3 +9,18 @@
 如果 select … for update 语句的查询条件没有索引字段的话，整张表都无法进行增删改了，从这个现象看，好像是把表锁起来了，**但是并不是因为上面这两个表级锁的原因**。
 
 而是**因为如果锁定读查询语句，没有使用索引列作为查询条件，导致扫描是全表扫描。那么，每一条记录的索引上都会加 next-key 锁（行级锁），这样就相当于锁住的全表，这时如果其他事务对该表进行增、删、改操作的时候，都会被阻塞**。
+
+
+
+## MySQL的锁是行锁还是表锁
+
+如果update的where条件包含索引列并且只更新一条数据，加行锁
+
+如果where条件不包含索引列，加表锁
+
+
+
+select … for update 语句的查询条件没有索引字段的话，整张表都无法进行增删改了，从这个现象看，好像是把表锁起来了
+
+否则的话加一个间隙锁，锁住查询条件索引列所在的区间
+
