--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -204,5 +204,25 @@ hash表：
 
 缓存雪崩：某一时间内大批量数据过期，此时大量请求查询数据库导致数据库压力过大
 
+#### 33.延迟双删
 
+**延迟双删**（Delay Double Delete）是一种在数据更新或删除时为了保证[数据一致性](https://so.csdn.net/so/search?q=数据一致性&spm=1001.2101.3001.7020)而采取的策略。这种策略通常用于解决数据在缓存和数据库中不一致的问题。
+
+**更新缓存模式**：每次更新数据库都更新缓存，无效写操作较多
+
+**删除缓存模式**：更新数据时更新数据库并删除缓存，查询时更新缓存，无效写操作较少，那么是先操作缓存还是先操作数据库？
+
+​	如何操作呢？
+
+​	**先操作缓存**：先删缓存，再更新数据库。请求直接到数据库，给数据库带来巨大压力
+
+​	**先操作数据库**：先更新数据库，再删缓存。当线程1在查询缓存且未命中，此时线程1查询数据，查询完准备写入缓存时，由于没有加锁线程2乘虚而入，线程2在这期间对数据库进行了更新，此时线程1将旧数据返回了，出现了脏读，但是这种概率很小
+
+#### 如果就想先操作缓存，再更新数据库怎么办？
+
+延迟双删：当需要更新数据库中的数据时，首先会先删除缓存，然后再进行数据库的更新操作。这样做的目的是**为了避免在数据库更新的过程中，有其他请求读取了已经失效的缓存数据。**
+
+1. **第一次删除**：在更新数据库之前，先删除缓存。（因为数据库需要更新，在更新数据库之前，先删除缓存，确保后续读取操作不会命中旧数据。）
+2. **更新数据库**：执行数据库更新操作。
+3. **第二次删除**：在数据库更新完成后，延迟一段时间再次删除缓存。（为了防止在数据库更新过程中，其他线程读取到旧数据并重新写入缓存。）
 
