--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -199,6 +199,25 @@ equals():
 类重写了 equals() 方法：一般我们都重写 equals() 方法来比较两个对象中的属性是否相等；若它们的属性相等，则返回 true(即，认为这两个对象相等)。
 ```
 
+#### 18.1hashcode()和equals()的关系
+
+```java
+hashCode()
+作用：计算对象的哈希值，用于快速定位对象在哈希表中的存储位置。
+规则：
+如果两个对象相等(equals() 返回 true），它们的 hashCode() 必须相同。
+如果两个对象的 hashCode() 不同，它们一定不相等。
+equals()
+作用：判断两个对象是否相等。
+规则：
+如果两个对象相等(equals() 返回 true），它们的 hashCode() 必须相同。
+如果两个对象的 hashCode() 相同，equals() 可能返回 true 或 false。
+         
+如果两个对象相等，它们的 hashCode() 必须相同。
+如果两个对象的 hashCode() 相同，equals() 可能返回 true 或 false。
+在使用哈希表时，必须重写 hashCode() 和 equals() 方法，以确保逻辑正确。
+```
+
 #### 19.hashCode()作用
 
 ```java
@@ -341,3 +360,28 @@ class Main {
 2.匿名内部类的生命周期取决于它的使用场景。如果它是在一个方法内部定义的，那么当方法执行结束后，只要没有其他引用指向这个匿名内部类的对象，它就会被垃圾回收。如果它是作为一个类的成员变量定义的，那么它的生命周期会和这个类的对象生命周期相关。
 
 3.匿名内部类在定义的同时就会被实例化，并且只能创建一个实例。
+
+#### 28.Java的修饰符区别
+
+- **public**
+
+  公开访问，任何类都可以访问。
+
+- **private** 
+
+  私有访问，仅在定义它的类内部可见。
+
+- **protected**
+
+  受保护访问，同一包内的类和子类可以访问。
+
+#### 29.反射和动态代理
+
+#### 30.final关键字
+
+| 用法           | 作用                   | 关键特性                                                   |
+| -------------- | ---------------------- | ---------------------------------------------------------- |
+| final class    | **类不能被继承**       | 确保类的定义不会被修改，提升安全性和性能                   |
+| final method   | **方法不能被子类重写** | 允许继承但不允许修改方法逻辑                               |
+| final variable | **变量值不可变**       | 变量只能赋值一次（但对于对象引用，指向的对象内容仍然可变） |
+
