--- a/操作系统/内存管理/内存管理.md
+++ b/操作系统/内存管理/内存管理.md
@@ -1,7 +1,7 @@
 ## 为什么要有虚拟内存
 
 ​	用户程序可以访问任意内存，寻址内存的每个字节，这样就很容易(有意或者无意)破坏操作系统，造成操作系统崩溃。
-	想要同时运行多个程序特别困难，比如你想同时运行一个微信和一个 QQ 音乐都不行。为什么呢?举个2简单的例子:微信在运行的时候给内存地址 1xxx 赋值后，QQ 音乐也同样给内存地址 1xxx 赋值，那么 QQ 音乐对内存的赋值就会覆盖微信之前所赋的值，这就造成微信这个程序会崩溃
+​	想要同时运行多个程序特别困难，比如你想同时运行一个微信和一个 QQ 音乐都不行。为什么呢?举个2简单的例子:微信在运行的时候给内存地址 1xxx 赋值后，QQ 音乐也同样给内存地址 1xxx 赋值，那么 QQ 音乐对内存的赋值就会覆盖微信之前所赋的值，这就造成微信这个程序会崩溃
 
 
 
@@ -11,8 +11,9 @@
 ![](D:\学习笔记\操作系统\pictures\Snipaste_2025-03-03_21-36-32.jpg)
 
 程序在访问相同虚拟地址的时候，由操作系统转换成不同的物理地址，这样不同的进程运行的时候，写入的是不同的物理地址，这样就不会冲突了。
-	我们程序所使用的内存地址叫做「虚拟内存地址」;
-	实际存在硬件里面的空间地址叫「物理内存地址」;
+	**我们程序所使用的内存地址叫做「虚拟内存地址」**
+
+​	**实际存在硬件里面的空间地址叫「物理内存地址」**
 
 有了虚拟内存后，进程只能操作虚拟内存，不能操作物理内存，每个进程的虚拟地址空间是相互独立的进程不能访问其他进程的虚拟地址，这就解决了多进程之间地址冲突的问题。还有虚拟内存可以使得进程对运行内存超过物理内存大小，通过将没有被经常使用到的内存换出到物理内存之外，比如硬盘上的 swap 区域，只在需要时再将数据加载到内存中。
 
