--- a/计算机网络/应用层.md
+++ b/计算机网络/应用层.md
@@ -54,3 +54,24 @@
 #### （2）**加密通信阶段**
 
 ​	   握手完成后，客户端和服务器之间使用对称加密算法（如AES）进行数据传输。对称加密算法使用一个共享的密钥（Session Key），该密钥在握手过程中生成，并且只在当前会话中使用。
+
+## 3.常见的流量限制技术
+
+- **固定窗口**：在固定时间窗口内限制请求数量。
+- **滑动窗口**：在滑动时间窗口内限制请求数量。
+- **令牌桶算法**：通过令牌桶控制请求速率。
+- **漏桶算法**：通过漏桶控制请求速率。
+
+## 4.Cookie和Session
+
+Cookie 是服务器发送到用户浏览器并保存在本地的一小块数据（通常小于 4KB）。
+
+服务器通过 HTTP 响应头的 `Set-Cookie` 字段将 Cookie 发送给浏览器。
+
+- **存储位置**：Cookie 存储在客户端（浏览器）中。
+- **作用**：浏览器会在后续的请求中自动携带 Cookie，从而实现用户状态的跟踪。
+
+Session 是服务器端的一种机制，用于存储用户的会话信息。
+
+- **作用**：通过 Session，服务器可以识别用户的身份并存储用户的状态。
+- **存储位置**：Session 存储在服务器端，通常存储在内存、数据库或文件系统中。
