--- a/设计模式/常见设计模式.md
+++ b/设计模式/常见设计模式.md
@@ -53,7 +53,7 @@ class ConcreteFactoryB implements Factory {
 
 ## 2.抽象工厂模式
 
-提供了一个接口，用于创建一系列相关或依赖对象的家族，而不需要明确指定它们的具体类。抽象工厂模式的核心思想是将对象的创建逻辑抽象化，通过工厂接口来统一管理不同类型的对象创建。
+提供了一个接口，用于创建一系列相关或依赖对象的家族，而不需要明确指定它们的具体类。抽象工厂模式的核心思想是将对象的创建逻辑抽象化，**通过工厂接口来统一管理不同类型的对象创建。**
 
 也是可以在客户端调用时不需要知道具体的产品类
 
