--- a/MySQL/日志.md
+++ b/MySQL/日志.md
@@ -47,5 +47,9 @@ redo log的作用：
 
 #### 两阶段提交的过程以及原因
 
-- **prepare 阶段**：将 XID（内部 XA 事务的 ID） 写入到 redo log，同时将 redo log 对应的事务状态设置为 prepare，然后将 redo log 持久化到磁盘（innodb_flush_log_at_trx_commit = 1 的作用）；
-- **commit 阶段**：把 XID 写入到 bin log，然后将 bin log 持久化到磁盘（sync_binlog = 1 的作用），接着调用引擎的提交事务接口，将 redo log 状态设置为 commit，此时该状态并不需要持久化到磁盘，只需要 write 到文件系统的 page cache 中就够了，因为只要 binlog 写磁盘成功，就算 redo log 的状态还是 prepare 也没有关系，一样会被认为事务已经执行成功；
+![](D:\学习笔记\MySQL\picture\Snipaste_2025-03-12_23-18-29.png)
+
+两阶段提交把事务的提交拆分成了2个阶段，分别是**准备阶段和提交阶段**。准备阶段会将 **redo log 状态设置为 prepare 状态**，然后将 redo log 刷入磁盘;提交阶段会将 binlog 刷入磁盘，然后设置 **redo log 设置为 commit 状态,**到这里两阶段就已经完成了。
+在两阶段提交中，是以 **binlog 刷入磁盘时机作为事务提交成功的标志的:**
+如果 binlog 还没刷入磁盘的时候，MySOL就发生了崩溃，MySOL 重启的时候就需要回滚事务
+如果 binlog 刷入磁盘，即使 redo log 没有设置 commit 状态，MySOL 就发生了崩溃，MySQL重启的时候就会提交事务。
