--- a/java/Redis/面试题.md
+++ b/java/Redis/面试题.md
@@ -226,3 +226,54 @@ hash表：
 2. **更新数据库**：执行数据库更新操作。
 3. **第二次删除**：在数据库更新完成后，延迟一段时间再次删除缓存。（为了防止在数据库更新过程中，其他线程读取到旧数据并重新写入缓存。）
 
+#### 34.Redis过期删除和内存淘汰
+
+#####  1.**定期删除**
+
+- **原理**：Redis 默认每隔 100ms 随机抽取一部分设置了过期时间的键，检查是否过期，如果过期则删除。
+- **优点**：减少对 CPU 的占用，避免频繁检查所有键。
+- **缺点**：可能导致部分过期键未被及时删除，占用内存。
+
+##### **2.惰性删除**
+
+- ##### **原理**：当客户端访问某个键时，Redis 会检查该键是否过期，如果过期则删除。
+
+- **优点**：确保访问到的键一定是有效的。
+
+- **缺点**：如果**过期键未被访问，可能会一直占用内存。**
+
+#### 34.1 内存淘汰策略
+
+1. noeviction
+
+   （默认策略）：
+
+   - 不删除任何数据，当内存不足时，新写入操作会报错。
+   - 适用于数据不可丢失的场景。
+
+2. allkeys-lru
+
+   - 从所有键中删除最近最少使用（LRU）的键。
+   - 适用于需要保留热点数据的场景。
+
+3. volatile-lru
+
+   - 从设置了过期时间的键中删除最近最少使用（LRU）的键。
+   - 适用于需要保留未过期数据的场景。
+
+4. allkeys-random
+
+   - 从所有键中随机删除键。
+   - 适用于对数据删除无特殊要求的场景。
+
+5. volatile-random
+
+   - 从设置了过期时间的键中随机删除键。
+   - 适用于对未过期数据无特殊要求的场景。
+
+6. volatile-ttl
+
+   - 从设置了过期时间的键中删除剩余生存时间（TTL）最短的键。
+   - 适用于优先删除即将过期数据的场景。
+
+#### 35.Redis的缓存一致性如何保证
