--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -368,12 +368,13 @@ ReentrantLock 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和
   2.可实现公平锁 :ReentrantLock可以指定是公平锁还是非公平锁。而synchronized只能是非公平锁。所谓的公平锁就是先等待的线程先获得锁。ReentrantLock默认情况是非公平的，可以通过 ReentrantLock类的ReentrantLock(boolean fair)构造方法来指定是否是公平的。
 ```
 
-#### 16.ThreadLocal 有什么用？
+#### 16.ThreadLocal 有什么用？（用ThreadLocal存放用户信息有什么好处）
 
 ```java
 ThreadLocal类主要解决的就是让每个线程绑定自己的值，可以将ThreadLocal类形象的比喻成存放数据的盒子，盒子中可以存储每个线程的私有数据。
 每个Thread中都具备一个ThreadLocalMap，而ThreadLocalMap可以存储以ThreadLocal为 key，value 是 ThreadLocal 对象调用set方法设置的值。
-    
+
+在并发环境下，每个线程都有自己独立的用户上下文信息，在并发环境下正确保存用户数据
 1.1 线程隔离
 原理：ThreadLocal 为每个线程提供独立的变量副本，确保线程之间的数据隔离。
 安全性：用户信息仅在当前线程中可见，其他线程无法访问，避免了多线程环境下的数据竞争和混乱。
@@ -383,12 +384,24 @@ ThreadLocal类主要解决的就是让每个线程绑定自己的值，可以将
 1.3 避免全局变量
 原理：ThreadLocal 避免了使用全局变量存储用户信息。
 安全性：全局变量容易被多个线程同时访问和修改，而 ThreadLocal 通过线程隔离避免了这一问题。
+1.4 简化参数传递
+无需在方法参数中显式传递。
 ```
 
 #### 	Thread内存泄漏
 
 - **原因**：`ThreadLocal` 的键（`ThreadLocal` 对象本身）是弱引用（WeakReference），当没有强引用指向 `ThreadLocal` 对象时，它会被垃圾回收。
+
 - **问题**：键被回收后，值（存储在 `ThreadLocalMap` 中的对象）仍然存在，但无法通过 `ThreadLocal` 访问，造成内存泄漏。
+
+- #### **键设置为弱引用的原因**
+
+  1. 防止内存泄漏
+     - 如果 `ThreadLocal` 的键是强引用，即使 `ThreadLocal` 实例不再使用，**由于 `ThreadLocalMap` 仍然持有其引用**，`ThreadLocal` 实例不会被回收，导致内存泄漏。
+     - 将键设置为弱引用后，**当 `ThreadLocal` 实例不再被强引用指向时，可以被垃圾回收，从而避免内存泄漏。**
+  2. 自动清理无效键
+     - 当 `ThreadLocal` 实例被回收后，`ThreadLocalMap` 中的对应键会自动失效，值会被标记为可清理。
+     - 在后续操作中（如 `set()`、`get()`、`remove()`），`ThreadLocalMap` 会清理这些无效键值对。
 
 #### 17.线程池、线程的生命周期
 
