--- a/MySQL/事务.md
+++ b/MySQL/事务.md
@@ -58,7 +58,7 @@ set autocommit=false 默认是 on
 
 - ![](D:\学习笔记\MySQL\picture\Snipaste_2024-02-08_03-02-52.png)
 
-#### 5.mvcc是什么，解决了什么问题
+## 5.mvcc是什么，解决了什么问题
 
 **MVCC的目的主要是为了提高数据库并发性能，用更好的方式去处理读-写冲突，做到即使有读写冲突时，也能做到不加锁。**
 
@@ -68,15 +68,35 @@ set autocommit=false 默认是 on
 
 ​	主要解决读写并发的问题，只用锁效率太低
 
-**版本链**
+### 隐藏列
+
+DB_TRX_ID:当前这条数据被哪个事务id维护
+
+DB_ROLL_PTR:指向最新的历史数据
+
+### **版本链**
+
+历史数据存储在undolog，多事务并发时都存储在undolog中
 
 在MVCC中，对于每次更新操作，旧值会被保存到一条undo日志中，即使它是该记录的旧版本。随着更新次数的增加，所有的版本都会通过roll_pointer属性连接成一个链表，称之为版本链。
 
 版本链的头节点代表当前记录的最新值。此外，每个版本还包含生成该版本的事务ID。
 
-**ReadView**
+### **ReadView**
 
 **一致性视图，全称 Read View ，是用来判断版本链中的哪个版本对当前事务是可见的**
+
+具体如何找历史数据，就使用到了ReadView，每一次查询都会创建一个ReadView，主要存储当前事务id，未提交事务id（从小到大），未开始事务id
+
+具体匹配规则如下（以读已提交为例（**每次查询**都会创建一个ReadView））：
+
+1.拿到undolog最新版本的数据，**根据这个事务id和当前事务id进行对比 ，若相等，说明可以读取**，**若小于未提交事务的最小id，可以读取**，**若大于未开始事务id，不能读取**，**若在未提交事务id范围内，不能读取**
+
+2.若都不满足，则通过roll指针找历史版本的数据再进行上述判断
+
+**可重复读**（执行多次同样查询时，只会创建一次ReadView）
+
+串行化利用的是表锁
 
 #### 6.MySQL解决幻读
 
