--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -385,3 +385,17 @@ class Main {
 | final method   | **方法不能被子类重写** | 允许继承但不允许修改方法逻辑                               |
 | final variable | **变量值不可变**       | 变量只能赋值一次（但对于对象引用，指向的对象内容仍然可变） |
 
+#### 31.try catch中return
+
+当 `try` 块中执行了 `return` 语句时，程序会按照以下顺序执行：
+
+1. **保存 `return` 的值**：程序会先保存 `return` 语句的返回值。
+2. **执行 `finally` 块**：程序会跳转到 `finally` 块并执行其中的代码。
+3. **返回保存的值**：`finally` 块执行完毕后，程序会返回之前保存的值。
+
+总结：
+
+- **`finally` 总是会执行**：无论 `try` 块中是否发生异常、是否执行了 `return`，`finally` 块都会执行。
+- **`finally` 的作用**：确保某些操作（如资源释放）始终被执行，即使在 `try` 块中发生了异常或执行了 `return`。
+- **`finally` 中的 `return`**：如果 `finally` 中包含 `return`，会覆盖 `try` 块中的返回值。
+
