--- a/java/面试/并发/常见问题.md
+++ b/java/面试/并发/常见问题.md
@@ -371,6 +371,7 @@ ReentrantLock 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和
 #### 16.ThreadLocal 有什么用？（用ThreadLocal存放用户信息有什么好处）
 
 ```java
+ThreadLocal是Java中提供的线程本地存储机制，可以利用该机制将数据缓存在某个线程内部，该线程可以在任意时刻，任意方法中获取缓存的数据。
 ThreadLocal类主要解决的就是让每个线程绑定自己的值，可以将ThreadLocal类形象的比喻成存放数据的盒子，盒子中可以存储每个线程的私有数据。
 每个Thread中都具备一个ThreadLocalMap，而ThreadLocalMap可以存储以ThreadLocal为 key，value 是 ThreadLocal 对象调用set方法设置的值。
 
@@ -493,9 +494,10 @@ FixedThreadPool 使用的是LinkedBlockingQueue（无界队列），由于队列
 #### 20.AQS
 
 ```java
-抽象队列同步器,AQS 就是一个抽象类，主要用来构建锁和同步器。
+抽象队列同步器,AQS 就是一个抽象类，主要用来构建锁和同步器。（ReentrantLock、CountDownLatch、Semaphore等都是基于AQS实现）
 AQS 核心思想是，如果被请求的共享资源空闲，则将当前请求资源的线程设置为有效的工作线程，并且将共享资源设置为锁定状态。如果被请求的共享资源被占用，那么就需要一套线程阻塞等待以及被唤醒时锁分配的机制，这个机制 AQS 是用 CLH 队列锁 实现的，即将暂时获取不到锁的线程加入到队列中。
-
+通过一个整数（state）来表示同步状态，并通过一个先进先出（FIFO）的队列来管理那些获取同步状态失败的线程。
+    
 CLH(Craig,Landin,and Hagersten) 队列是一个虚拟的双向队列（虚拟的双向队列即不存在队列实例，仅存在结点之间的关联关系）。AQS 是将每条请求共享资源的线程封装成一个 CLH 锁队列的一个结点（Node）来实现锁的分配。在 /*CLH 同步队列中，一个节点表示一个线程*/，它保存着线程的引用（thread）、 当前节点在队列中的状态（waitStatus）、前驱节点（prev）、后继节点（next）。
 ```
 
@@ -528,7 +530,7 @@ Semaphore实际上是一种共享锁，它默认构造 AQS 的 state 值为 perm
 #### 22.CountDownLatch
 
 ```java
-允许 count 个线程阻塞在一个地方，直至所有线程的任务都执行完毕。
+允许 count 个线程阻塞在一个地方，它允许一个或多个线程等待其他线程完成操作后再继续执行
 是共享锁的一种实现,它默认构造 AQS 的 state 值为 count， 当线程调用 countDown()方法时，减小state值，当线程调用 await() 方法时，它会检查AQS的state值是否为0。如果state不为0，说明还有未完成的任务，await()方法将一直阻塞当前线程，不执行await()之后的语句。直到count个线程调用了 countDown() 使 state 值被减为 0，或者调用await()的线程被中断，该线程才会从阻塞中被唤醒，await() 方法之后的语句得到执行
 
 CountDownLatch 是 Java 中一个同步辅助类，它允许一个或多个线程等待其他线程完成操作。CountDownLatch 维护一个计数器，初始化时设定一个数值，当调用 countDown() 方法时，计数器的值减一；当计数器的值变为零时，所有等待的线程都会被释放。
