--- a/java/面试/java基础/常见问题.md
+++ b/java/面试/java基础/常见问题.md
@@ -399,3 +399,71 @@ class Main {
 - **`finally` 的作用**：确保某些操作（如资源释放）始终被执行，即使在 `try` 块中发生了异常或执行了 `return`。
 - **`finally` 中的 `return`**：如果 `finally` 中包含 `return`，会覆盖 `try` 块中的返回值。
 
+#### 32.解释Java的多态
+
+多态是指同一个接口或父类引用变量可以指向不同的对象实例，并根据实际指向的对象类型执行相应的方法。
+它允许同一方法在不同对象上表现出不同的行为，是面向对象编程(OOP)的核心特性之一。
+
+编译时多态:通过方法重载实现，在编译时确定方法的调用
+
+```java
+class Example {
+    void display(int a) {
+        System.out.println("Integer: " + a);
+    }
+
+    void display(double a) {
+        System.out.println("Double: " + a);
+    }
+
+    void display(String a) {
+        System.out.println("String: " + a);
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Example obj = new Example();
+        obj.display(5);         // 调用 display(int a)
+        obj.display(3.14);      // 调用 display(double a)
+        obj.display("Hello");   // 调用 display(String a)
+    }
+}
+
+```
+
+运行时多态:通过方法重写实现，在运行时确定方法的调用。
+
+```java
+class Animal {
+    void sound() {
+        System.out.println("Animal makes a sound");
+    }
+}
+
+class Dog extends Animal {
+    @Override
+    void sound() {
+        System.out.println("Dog barks");
+    }
+}
+
+class Cat extends Animal {
+    @Override
+    void sound() {
+        System.out.println("Cat meows");
+    }
+}
+
+public class Main {
+    public static void main(String[] args) {
+        Animal myDog = new Dog(); // Animal reference but Dog object
+        Animal myCat = new Cat(); // Animal reference but Cat object
+
+        myDog.sound(); // 输出: Dog barks
+        myCat.sound(); // 输出: Cat meows
+    }
+}
+
+```
+
