--- a/MySQL/日志.md
+++ b/MySQL/日志.md
@@ -2,7 +2,25 @@
 
 ​	undo log 是一种用于撤销回退的日志。在事务没提交之前，MySQL 会先记录更新前的数据到 undo log 日志文件里面，当事务回滚时，可以利用 undo log 来进行回滚
 
-redo log的作用：
+redo log的作用：是 Innodb 存储引擎层生成的日志，实现了事务中的**持久性**，主要**用于掉电等故障恢复**；
+
+### 有了undolog为啥还需要redolog呢？
+
+Buffer Pool 是提高了读写效率没错，但是问题来了，Buffer Pool 是基于内存的，而内存总是不可靠，万一断电重启，还没来得及落盘的脏页数据就会丢失。
+
+为了防止断电导致数据丢失的问题，当有一条记录需要更新的时候，**InnoDB 引擎就会先更新内存（同时标记为脏页）**，然后将本次对这个页的修改以 redo log 的形式记录下来，这个时候更新就算完成了。 后续，InnoDB 引擎会在适当的时候，由后台线程将缓存在 Buffer Pool 的脏页刷新到磁盘里，这就是 WAL （Write-Ahead Logging）技术。 WAL 技术指的是， **MySQL 的写操作并不是立刻写到磁盘上，而是先写日志，然后在合适的时间再写到磁盘上。**
+
+redo log 是物理日志，记录了某个数据页做了什么修改，比如对 XXX 表空间中的 YYY 数据页 ZZZ 偏移量的地方做了AAA 更新，每当执行一个事务就会产生这样的一条或者多条物理日志。 **在事务提交时，只要先将 redo log 持久化到磁盘即可**，可以不需要等到将缓存在 Buffer Pool 里的脏页数据持久化到磁盘。 当系统崩溃时，虽然脏页数据没有持久化，但是 redo log 已经持久化，接着 **MySQL 重启后，可以根据 redo log 的内容，将所有数据恢复到最新的状态。**
+
+redo log 记录了此次事务「完成后」的数据状态，记录的是更新之后的值； 
+
+undo log 记录了此次事务「开始前」的数据状态，记录的是更新之前的值；
+
+事务提交之前发生了崩溃，重启后会通过 undo log 回滚事务，事务提交之后发生了崩溃，重启后会通过 redo log 恢复事务
+
+
+
+![](D:\学习笔记\MySQL\picture\Snipaste_2025-03-17_01-57-58.png)
 
 **WAL 技术指的是， MySQL 的写操作并不是立刻写到磁盘上，而是先写日志，然后在合适的时间再写到磁盘上**。
 
@@ -14,6 +32,8 @@ redo log的作用：
 
 ### bin log
 
+二进制日志，数据备份和主从复制
+
 用于记录所有对数据库执行的**写操作**（如`INSERT`、`UPDATE`、`DELETE`等），但不记录`SELECT`操作。`binlog`的主要作用是：
 
 1. **数据恢复**：通过`binlog`可以恢复数据库到某个时间点的状态。
@@ -24,7 +44,7 @@ redo log的作用：
 
 1、适用对象不同：
 
-- binlog 是 MySQL 的 Server 层实现的日志，所有存储引擎都可以使用；
+- binlog 是 MySQL 的 **Server** 层实现的日志，所有存储引擎都可以使用；
 - redo log 是 Innodb 存储引擎实现的日志；
 
 2、文件格式不同：
@@ -37,8 +57,8 @@ redo log的作用：
 
 3、写入方式不同：
 
-- bin log 是追加写，写满一个文件，就创建一个新的文件继续写，不会覆盖以前的日志，保存的是全量的日志。
-- redo log 是循环写，日志空间大小是固定，全部写满就从头开始，保存未被刷入磁盘的脏页日志。
+- bin log 是**追加写**，写满一个文件，**就创建一个新的文件继续写，不会覆盖以前的日志，保存的是全量的日志。**
+- redo log **是循环写，日志空间大小是固定，全部写满就从头开始，保存未被刷入磁盘的脏页日志。**
 
 4、用途不同：
 
@@ -47,9 +67,15 @@ redo log的作用：
 
 #### 两阶段提交的过程以及原因
 
+事务提交后，redo log 和 binlog 都要持久化到磁盘，但是这两个是独立的逻辑，可能出现半成功的状态，这样就造成两份日志之间的逻辑不一致。
+
 ![](D:\学习笔记\MySQL\picture\Snipaste_2025-03-12_23-18-29.png)
 
-两阶段提交把事务的提交拆分成了2个阶段，分别是**准备阶段和提交阶段**。准备阶段会将 **redo log 状态设置为 prepare 状态**，然后将 redo log 刷入磁盘;提交阶段会将 binlog 刷入磁盘，然后设置 **redo log 设置为 commit 状态,**到这里两阶段就已经完成了。
+两阶段提交把事务的提交拆分成了2个阶段，分别是**准备阶段和提交阶段**。
+
+**准备阶段**会将 **redo log 状态设置为 prepare 状态**，然后将 redo log 刷入磁盘;
+
+**提交阶段**会将 binlog 刷入磁盘，然后设置 **redo log 设置为 commit 状态,**到这里两阶段就已经完成了。
 在两阶段提交中，是以 **binlog 刷入磁盘时机作为事务提交成功的标志的:**
 如果 binlog 还没刷入磁盘的时候，MySOL就发生了崩溃，MySOL 重启的时候就需要回滚事务
 如果 binlog 刷入磁盘，即使 redo log 没有设置 commit 状态，MySOL 就发生了崩溃，MySQL重启的时候就会提交事务。
